# boom

./: Cargo.toml  README.md  bangs.json
assets/bangs/: index.html  style.css
benches/: test_bang.rs  test_resolve.rs  test_template.rs
boom-config/: Cargo.toml
boom-config/src/: default_config.toml  lib.rs  parse_config.rs  read_config.rs
boom-core/: Cargo.toml
boom-core/src/: boom.rs  cache.rs  lib.rs
boom-core/src/boom/: add_external_sources.rs  grab_remote_bangs.rs  parse_bangs.rs  parse_templates.rs  resolver.rs  update_bangs_from_config.rs
boom-web/: Cargo.toml  jsconfig.json
boom-web/assets/: index.css  index.html  layout.css
boom-web/assets/bangs/: index.d.ts  index.html  index.js  style.css  sw.js
boom-web/assets/components/: input.css  input.js  search-bar.css
boom-web/src/: history.rs  lib.rs  routes.rs
boom-web/src/routes/: api.rs  bangs.rs  history.rs  index.rs  opensearch.rs  suggest.rs
boom-web/src/routes/api/: add_bang.rs
src/: boom.rs  cache.rs  cli.rs  config.rs  lib.rs  main.rs  routes.rs  sync.rs
src/boom/: grab_remote_bangs.rs  parse_bangs.rs  parse_templates.rs  resolver.rs
src/config/: default_config.toml  parse_config.rs
src/routes/: bangs.rs  index.rs
src/sync/: add_bang.rs
tests/: bang.rs  template.rs
