[package]
name = "boom"
version = "0.1.1"
edition = "2024"

[features]
measure-allocs = []

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "test_bang"
harness = false

[[bench]]
name = "test_template"
harness = false

[[bench]]
name = "test_resolve"
harness = false

[dependencies]
allocation-counter = "0.8.1"
clap = { version = "4.5.34", features = ["derive", "string"] }
concat-string = "1.0.1"
ntex = { version = "2.12.3", features = ["tokio"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
toml_edit = { version = "0.22.24", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi"] }
urlencoding = "2.1.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
