[package]
name = "boom"
version = "0.1.1"
edition = "2024"

[features]
measure-allocs = []

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "test_bang"
harness = false

[[bench]]
name = "test_template"
harness = false

[[bench]]
name = "test_resolve"
harness = false

[dependencies]
allocation-counter = "0.8.1"
axum = "0.8.3"
axum-template = { version = "3.0.0", features = ["handlebars"] }
clap = { version = "4.5.34", features = ["derive", "string"] }
concat-string = "1.0.1"
handlebars = "6.3.2"
home = "0.5.11"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
toml_edit = { version = "0.22.24", features = ["serde"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi"] }
urlencoding = "2.1.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
