[workspace]
members = ["boom-config", "boom-core", "boom-web"]

[workspace.package]
version = "0.2.1"
description = "A speedy Rust implemenatation of DuckDuckGo's Bang system"
authors = ["Toby Bridle <bridle.toby@gmail.com>"]
repository = "https://github.com/TobyBridle/boom"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.34", features = ["derive", "string"] }
expanduser = "1.2.2"
rust-embed = "8.7.2"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi"] }
parquet = "56.1.0"

[package]
name = "boom"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
allocation-counter = "0.8.1"
boom-config = { path = "boom-config" }
boom-core = { path = "boom-core" }
boom-web = { path = "boom-web" }
clap.workspace = true
expanduser.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parquet.workspace = true

[features]
default = ["history"]
history = ["boom-core/history", "boom-web/history"]
history-suggestions = ["history", "boom-web/history-suggestions"]
measure-allocs = []

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "test_bang"
harness = false

[[bench]]
name = "test_template"
harness = false

[[bench]]
name = "test_resolve"
harness = false


[profile.release]
strip = true
lto = true
codegen-units = 1
