[package]
name = "boom-core"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
boom-config = { path = "../boom-config/" }
concat-string = "1.0.1"
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
urlencoding = "2.1.3"
tracing.workspace = true
expanduser.workspace = true
